tests/language_tests/pass/0121_string_variables_assignment_and_scope.ee
fn main() {
    let message = "outer";
    println(message);
    message = "updated";
    println(message);
    {
        let message = "inner";
        println(message);
    }
    println(message);
}
