tests/language_tests/fail/0059_println_keyword_as_variable_name.ee
fn main() {
    let println = 1;
}
